<resources>
    <string name="app_name">NoteApp</string>
    <string name="add_note">Add Note</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="image_url">Image URL</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="new_note">New Note</string>
    <string name="edited">*Edited</string>
</resources>