<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="note"
            type="com.task.noteapp.db.entities.NoteEntity" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivImage"
            imageUrl="@{note.imgUrl}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gImage"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />

        <TextView
            android:id="@+id/tvDate"
            longToDispDate="@{note.createDate}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="monospace"
            android:gravity="end|center_vertical"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12/12/1212" />

        <TextView
            android:id="@+id/tvEdited"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="start|center_vertical"
            android:text="@string/edited"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            android:visibility="@{note.isEdited? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/tvDate"
            app:layout_constraintStart_toStartOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="@id/tvDate"
            tools:text="*Edited" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="monospace"
            android:gravity="start|center_vertical"
            android:text="@{note.title}"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivImage"
            app:layout_constraintTop_toBottomOf="@id/tvDate"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Title" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="monospace"
            android:gravity="start|center_vertical"
            android:lines="2"
            android:text="@{note.description}"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/btnEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/ivImage"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintTop_toBottomOf="@id/tvDesc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>